--- a/算法/leetcode刷题/#3-爬楼梯.md
+++ b/算法/leetcode刷题/#3-爬楼梯.md
@@ -1,6 +1,7 @@
 ## 爬楼梯
 
 ### 题目
+
 假设你正在爬楼梯。需要 n 阶你才能到达楼顶。
 
 每次你可以爬 1 或 2 个台阶。你有多少种不同的方法可以爬到楼顶呢？
@@ -8,8 +9,36 @@
 注意：给定 n 是一个正整数。
 
 ### 思路
+
 之前碰到这种题目总是感觉是要用一种取巧的思路去解决。
 
 今天就来再次切身感受和理解下这个巧到底体现在哪里...
 
+其实思路还是回到我们小时候学的函数，这道题我们其实可以假设一个函数存在，即f(n) = ...
+
+当然，假如光靠题意，我们也能一个一个列出来，然后去获取这个函数的表达式，但是这里没必要去这样做，因为我们可以从后往前推导出一个结论
+
+假如你最后一步是走了2步，那么在此走之前，你就走过了`n - 2`级台阶，那么这`n - 2`级台阶你就有f(n - 2)种走法，
+
+同理，假如你最后走了1布，那么在此走之前，你就走过了`n - 1`级台阶，那么这`n - 1`级台阶你就有f(n - 1)种走法，
+
+而f(n)则正好就可以根据最后一步走1步还是2步来进行分割，根据上面，走1步一共有f(n - 1)种方案，走2步一共有f(n - 2)种方法，所以我们得到
+
+>> f(n) = f(n - 1) + f(n - 2)
+
+
 ### 解答
+
+```javascript
+const climbStairs = function(n) {
+    let result = new Array(n+1)
+    result[1] = 1 //到第一阶有1种
+    result[2] = 2 //到第二阶有2种
+
+    for(let i = 3; i < n+1; i++){
+        result[i] = result[i-1] + result[i-2]
+    }
+
+    return result[n]
+}
+```
